# whisperX

./: .dockerignore  .gitignore  Dockerfile  README.md  app_simple.py  app_streamlit.py  docker-compose.yml  pyproject.toml  test.ipynb  test.py  test_whisperx.py
whisperx/: diarize.py
