[project]
urls = { repository = "https://github.com/m-bain/whisperx" }
authors = [{ name = "Max Bain" }]
name = "whisperx"
version = "3.7.4"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = { text = "BSD-2-Clause" }

dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    # Restrict numpy, onnxruntime, pandas, av to be compatible with Python 3.9
    "numpy>=2.0.2,<2.3.0; python_version <'3.13'",
    "onnxruntime>=1.19,<1.20.0; python_version <'3.13'",
    "pandas>=2.2.3,<2.3.0",
    "av<16.0.0",
    "numpy>=2.1.0,<2.3.0; python_version >='3.13'",
    "pyannote-audio>=4.0.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "transformers>=4.48.0", # only install triton on x86_64 Linux
    "triton>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision>=0.23.0",
    "streamlit==1.50.0",
    "python-docx==1.2.0",
    "torchcodec==0.7.0"
]


[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchcodec = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
